Fix for mis-formatted examples with fixed whitespace.

--- a/P5/guidelines.css
+++ b/P5/guidelines.css
@@ -1,61 +1,61 @@
 /*
   ** Copyright 2011 TEI Consortium
   $Id$
-Most TEI Consortium materials, including the TEI Guidelines, are copyrighted by 
-the Text Encoding Initiative Consortium, and are made available under the terms 
+Most TEI Consortium materials, including the TEI Guidelines, are copyrighted by
+the Text Encoding Initiative Consortium, and are made available under the terms
 and conditions of both:
 
-Creative Commons Attribution 3.0 Unported License 
-http://creativecommons.org/licenses/by/3.0/ 
+Creative Commons Attribution 3.0 Unported License
+http://creativecommons.org/licenses/by/3.0/
 
-and a 
+and a
 
 BSD 2-Clause license
 http://www.opensource.org/licenses/BSD-2-Clause
 
-You may choose the license that is most appropriate for the use you intend to 
-make of the TEI material. Hence it is made available under both the CC+BY and 
-BSD-2 licences. The CC+BY licence is generally appropriate for usages which 
-treat TEI content as data or documentation. The BSD-2 licence is generally 
-appropriate for usage of TEI content in a software environment. For further 
+You may choose the license that is most appropriate for the use you intend to
+make of the TEI material. Hence it is made available under both the CC+BY and
+BSD-2 licences. The CC+BY licence is generally appropriate for usages which
+treat TEI content as data or documentation. The BSD-2 licence is generally
+appropriate for usage of TEI content in a software environment. For further
 information or clarification, please contact the TEI Consortium(info@tei-c.org).
 
-This license permits a wide range of uses, as long as attribution is preserved, 
+This license permits a wide range of uses, as long as attribution is preserved,
 including the following:
 
-* Users may make copies of TEI materials, whether the XML source or the derived 
-products (XHTML, PDF, DTD, RELAX NG, etc.) either digitally, with a 
+* Users may make copies of TEI materials, whether the XML source or the derived
+products (XHTML, PDF, DTD, RELAX NG, etc.) either digitally, with a
 photocopier, by audio recording, or by any other means.
-* Users may distribute copies of the TEI materials, either for free or for a 
+* Users may distribute copies of the TEI materials, either for free or for a
 fee.
-* Users may make changes to TEI materials and distribute the modified version 
+* Users may make changes to TEI materials and distribute the modified version
 provided that they provide attribution of the TEI Consortium as the source.
 
 The following activities are all allowed and encouraged:
 * Downloading a copy of the HTML version of the TEI Guidelines or its source
 * Giving a copy of the HTML version of the TEI Guidelines to a friend.
 * Downloading or giving to others the source of the TEI materials.
-* Distributing copies of the TEI materials (source or derived) on media or 
+* Distributing copies of the TEI materials (source or derived) on media or
 from websites.
 * Making derived software that uses the TEI materials as a source
-But make sure to provide reasonable attribution back to the TEI Consortium, for 
+But make sure to provide reasonable attribution back to the TEI Consortium, for
 example by citing this website.
 
 BSD 2-Clause
-If you choose to use the BSD 2-Clause license, these conditions require 
+If you choose to use the BSD 2-Clause license, these conditions require
 including the following:
 
 ===
 Copyright 2013 TEI Consortium. All rights reserved.
-          
-Redistribution and use in source and binary forms, with or without 
+
+Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
-  *    Redistributions of source code must retain the above copyright notice, 
+  *    Redistributions of source code must retain the above copyright notice,
        this list of conditions and the following disclaimer.
-  *    Redistributions in binary form must reproduce the above copyright notice, 
-       this list of conditions and the following disclaimer in the documentation 
+  *    Redistributions in binary form must reproduce the above copyright notice,
+       this list of conditions and the following disclaimer in the documentation
        and/or other materials provided with the distribution.
-        
+
  This software is provided by the copyright holders and contributors
  "as is" and any express or implied warranties, including, but not
  limited to, the implied warranties of merchantability and fitness for
@@ -379,6 +379,7 @@ pre,div.pre,div.pre_eg,pre.eg,div.eg {
     line-height: 1.1em;
     font-family: monospace;
     font-size: 10pt;
+    white-space: pre-wrap;
 }
 div.egXML_valid {
     background-color: #f7f9f6;
@@ -474,15 +475,15 @@ li.toc {
 span.headingNumber {
 }
 div.toc_back {
-/* MDH 2013-06-03: commenting this out as part of 
-   reworking of Guidelines TOC page.  When all is 
+/* MDH 2013-06-03: commenting this out as part of
+   reworking of Guidelines TOC page.  When all is
    good, delete.*/
     /* float: right; */
 }
-/* MDH 2013-06-03: Additions as part of reworking 
+/* MDH 2013-06-03: Additions as part of reworking
    of Guidelines TOC. */
-   
-/* Make sure the footer stays at the foot. */      
+
+/* Make sure the footer stays at the foot. */
 div.stdfooter{
     clear:both;
 }
@@ -527,7 +528,7 @@ a.ebookLink{
     text-decoration: none;
     cursor: pointer;
 }
-/* MDH 2013-06-03: End of additions as part of reworking 
+/* MDH 2013-06-03: End of additions as part of reworking
    of Guidelines TOC. */
 
 /* notes */
@@ -862,15 +863,15 @@ div.q {
     margin-left: 1em;
     margin-right: 1em;
 }
-/* MDH 2013-06-18: This ensures the bibliography list numerical markers 
+/* MDH 2013-06-18: This ensures the bibliography list numerical markers
    don't butt right up against the floated miniTOC. */
 ol.listBibl li {
   position: relative;
   left: 2em;
 }
 
-/* MDH 2014-09-09: This ensures that bulleted lists don't butt up against 
-   the floated miniTOC, especially in IE, where it's noticeable display bug. 
+/* MDH 2014-09-09: This ensures that bulleted lists don't butt up against
+   the floated miniTOC, especially in IE, where it's noticeable display bug.
    See https://sourceforge.net/p/tei/bugs/677/ */
 ul.bulleted, ol.numbered{
   overflow: hidden;
@@ -891,7 +892,7 @@ div#footnotePopup{
   width: 25%;
   background-color: #F6F6F6;
   border: 1px solid #2277BB;
-} 
+}
 div.footnotePopupCloser{
   border-style: solid;
   border-width: 1px;
@@ -902,4 +903,3 @@ div.footnotePopupCloser{
   width: 1em;
   background-color: #C0C0C0;
 }
-
